@@ -768,6 +768,7 @@ define function, begin
 738,resetenemyname,1,0        # Reset enemy name to original (enemy id)
 739,getextra,2,0,0            # Index an object's 'extra' array (handle, index)
 740,setextra,3,0,0,0          # Set element of an object's 'extra' array (handle, index, value)
+741,herouseslevelmp,1,0       # Returns true if the hero uses level mp
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
